jitfailure-dolfin_expression_7670ec3c1a5f70ffa444562d89833566/error.log
/tmp/tmp7kuoztdh/dolfin_expression_7670ec3c1a5f70ffa444562d89833566.cpp: In member function 'virtual void dolfin::dolfin_expression_7670ec3c1a5f70ffa444562d89833566::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const':
/tmp/tmp7kuoztdh/dolfin_expression_7670ec3c1a5f70ffa444562d89833566.cpp:61:23: error: expected primary-expression before 'if'
   61 |           values[0] = if x[0] < 1 : return x[0];
      |                       ^~
